<resources>
    <string name="app_name">MVM</string>
    <string name="app_welcome_text">Aplikacija za sugerisanje poljoprivredne proizvodnje</string>
    <string name="app_login">Prijavite se</string>
    <string name="app_no_account">Nemate nalog?</string>
    <string name="app_registration">Registrujte se</string>
    <string name="registration_username">Korisničko ime</string>
    <string name="registration_name">Ime i Prezime</string>
    <string name="registration_password">Šifra</string>
    <string name="registration_password_check">Ponovi šifru</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="product">Proizvod</string>


    <string name="menu_profile">Moj profil</string>
    <string name="menu_discussion">Moje diskusije</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_category">Kategorije</string>
    <string name="menu_predicted_price">Prediktovane cene</string>
    <string name="menu_suggestion_production">Sugestija proizvodnje</string>
    <string name="menu_offer">Ponuda otkupne cene</string>
    <string name="menu_suggestion_place">Sugestija prodajnog mesta</string>
    <string name="menu_settings">Podešavanja</string>
    <string name="menu_logout">Odjavi se</string>
    <string name="menu_offers">Ponude</string>

    <string name="show_offer">Prikaži</string>

    <string name="suggestion_label">Kolicina</string>
    <string name="finished">Sačuvaj</string>
    <string name="save_changes">Sačuvaj izmene</string>
    <string name="edit_password">Izmeni šifru</string>

    <string name="old_password">Stara šifra</string>
    <string name="pronadji">Pronadji</string>

    <string name="price_offer_label">Cena</string>
    <string name="livestock_label">Stocni objekti</string>
    <string name="production_suggesting_label">Stepen opremljenosti resursa</string>
    <string name="objects">Stočni objekti</string>
    <string name="parcel">Zemljišne parcele</string>
    <string name="high">visok</string>
    <string name="medium">osrednji</string>
    <string name="low">nizak</string>

    <string name="title">naslov</string>
    <string name="content">sadržaj</string>
    <string name="save_discussion">Sačuvajte diskusiju</string>

    <string name="send_offer">Pošalji</string>

    <string name="notification_switch">Obaveštenja</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
