<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/menu_forum" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_predicted_price"
            android:icon="@drawable/ic_euro_symbol_black_24dp"
            android:title="@string/menu_predicted_price" />

        <item
            android:id="@+id/nav_suggestion_production"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_suggestion_production" />

        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_offer" />

        <item
            android:id="@+id/nav_suggestion_place"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_suggestion_place" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/map_location"
            android:title="Mapa" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"
            android:title="@string/menu_offers" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />


    </group>
</menu>
