<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ProductionSuggesting">

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="181dp"
        android:layout_height="72dp"
        android:gravity="center_horizontal"
        android:text="@string/production_suggesting_label"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />


    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/textDesc"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objects"
            android:textColor="@color/colorButtonReg"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <RadioGroup
            android:id="@+id/radioObjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDesc"
            app:layout_constraintVertical_bias="0.037">

            <RadioButton
                android:id="@+id/radio11"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@color/colorButtonReg" />

            <RadioButton
                android:id="@+id/radio12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/colorButtonReg"/>

            <RadioButton
                android:id="@+id/radio13"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/colorButtonReg" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstLayout"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parcel"
            android:textColor="@color/colorButtonReg"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <RadioGroup
            android:id="@+id/radioFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.037">

            <RadioButton
                android:id="@+id/radio21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                android:textColor="@color/colorButtonReg"/>

            <RadioButton
                android:id="@+id/radio22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/colorButtonReg"/>

            <RadioButton
                android:id="@+id/radio23"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="@string/high"
                android:textColor="@color/colorButtonReg" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/buttonReg"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:background="@color/colorButtonReg"
        android:onClick="onFinishedClick"
        android:text="@string/finished"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondLayout"
        app:layout_constraintVertical_bias="0.364" />

</androidx.constraintlayout.widget.ConstraintLayout>